fixed extra white space on mobile

--- a/assets/css/partials/_variables.scss
+++ b/assets/css/partials/_variables.scss
@@ -19,6 +19,7 @@ $headline-font: 'Work Sans', sans-serif;
 $body-text-font: 'Work Sans', sans-serif;
 $xs-font-size: 12px;
 $small-font-size: 14px;
+$med-font-size: 16px;
 $default-font-size: 18px;
 $large-font-size: 55px;
 $lg-font-size-resp: 40px;
@@ -33,4 +34,4 @@ $transition-time-quick: all 0.3s ease-in-out 0s;
 $body-height: 100%;
 $body-width: 1000px;
 $margin-body: 175px 0 0 0;
-$section-margin: 100px 0;
+$section-margin: 75px 0;
